--- a/source/stylesheets/core/layouts/_nav.scss
+++ b/source/stylesheets/core/layouts/_nav.scss
@@ -96,8 +96,7 @@ html:lang(jp) nav.main-menu {
 
 		&.show {
 			@include transition-delay(.5s, 0);
-			max-width: 640px;
-			max-width: 100vw;
+			max-width: 300px;
 			max-height: 640px;
 
 			ul {
